[package]
name = "centipede"
version = "0.3.0"
authors = [
    "Omer <omer@kzencorp.com>",
    "Gary <gary@kzencorp.com>"
]
description = "A scheme for instantiating KMS's with recovery"
repository = "https://github.com/ZenGo-X/centipede"
license = "GPL-3.0"
categories = ["cryptography"]
keywords = ["cryptography", "crypto"]

[lib]
crate-type = ["lib"]

[dependencies]
serde_derive = "1.0"
serde = "1.0"
rayon = "1.0.3"
curv-kzen = { git = "https://github.com/webb-tools/curv.git", default-features = false }
bulletproof-kzen = { git = "https://github.com/webb-tools/bulletproofs-kzen.git", default-features = false }
sha2 = "0.9"
generic-array = "0.14"

[dev-dependencies]
criterion = "0.2"

[features]
default = ["curv-kzen/rust-gmp-kzen"]

[[bench]]
name = "v_backup"
path = "benches/v_backup.rs"
harness = false
